# schedule

./: .gitignore  CMakeLists.txt  README.md  auth.js  controller.js  design.md  index.js  package-lock.json  package.json  router.js  services.js  test.sh
CLI/: CMakeLists.txt  test.sh
CLI/data/: users.txt
CLI/data/tasks/: kurumi_task.txt  test_task.txt  testuser_task.txt
CLI/include/: Reminder.h  TimeUtils.h
CLI/src/: Reminder.cpp  TaskManager.cpp  TimeUtils.cpp  main.cpp
cpp/: README.md
cpp/data/tasks/: testuser_task.txt
cpp/include/: Interact.h  Task.h  TaskManager.h  TimeUtils.h  User.h  Utils.h
cpp/src/: Interact.cpp  Task.cpp  User.cpp  main.cpp
data/: users.txt
data/tasks/: kurumi_task.txt
database/: data.db  data.sqlite
db/: database.db
include/: Interact.h  Reminder.h  Task.h  TaskManager.h  TimeUtils.h  User.h  Utils.h
public/: dashboard.html  dashboard_2.html  dashboard_style.css  login.html  secret.css  secret.html  signup.html
src/: Interact.cpp  Reminder.cpp  Task.cpp  TaskManager.cpp  TimeUtils.cpp  User.cpp  Utils.cpp  interact.cpp  main.cpp
web/: README.md  auth.js  controller.js  package-lock.json  package.json
web/database/: data.db
web/public/: dashboard_2.html  dashboard_style.css  secret.html  signup.html
